--- a/app/views/constituencies/show.erb
+++ b/app/views/constituencies/show.erb
@@ -1,3 +1,5 @@
 <h1>Constituency</h1>
 
-    <p><%= @constituencies.name %> : <%= @constituencies.population %></p>
+    <p><%= @constituencies.name %> : <%= @constituencies.population %> : 
+    <% @constituencies.party_id %>
+    </p>
