--- a/app/views/constituencies/show.erb
+++ b/app/views/constituencies/show.erb
@@ -1,3 +1,5 @@
+<p><%= link_to 'HOME', '/' %></p>
+
 <h1>Constituency</h1>
 
     <p><%= @constituencies.name %> : <%= @constituencies.population %> : 
